--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 		<url/>
 	</scm>
 	<properties>
+	<sonar.organization>niconave17</sonar.organization>
+  	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
